      should run repair on the base tables, and subsequently on the views to ensure data affected by CASSANDRA-14251 is correctly
      propagated to all replicas.
    - Changes to bloom_filter_fp_chance will no longer take effect on existing sstables when the node is restarted. Only
      compactions/upgradesstables regenerates bloom filters and Summaries sstable components. See CASSANDRA-11163

Deprecation
-----------
    - Background read repair has been deprecated. dclocal_read_repair_chance and
      read_repair_chance table options have been deprecated, and will be removed entirely in 4.0.
      See CASSANDRA-13910 for details.

3.0.16
=====

Upgrading
---------
   - See MAXIMUM TTL EXPIRATION DATE NOTICE above.
   - Cassandra is now relying on the JVM options to properly shutdown on OutOfMemoryError. By default it will
     rely on the OnOutOfMemoryError option as the ExitOnOutOfMemoryError and CrashOnOutOfMemoryError options
     are not supported by the older 1.7 and 1.8 JVMs. A warning will be logged at startup if none of those JVM
     options are used. See CASSANDRA-13006 for more details.
   - Cassandra is not logging anymore by default an Heap histogram on OutOfMemoryError. To enable that behavior
     set the 'cassandra.printHeapHistogramOnOutOfMemoryError' System property to 'true'. See CASSANDRA-13006
     for more details.

Materialized Views
-------------------
   - Following a discussion regarding concerns about the design and safety of Materialized Views, the C* development
     community no longer recommends them for production use, and considers them experimental. Warnings messages will
     now be logged when they are created. (See https://www.mail-archive.com/dev@cassandra.apache.org/msg11511.html)
   - An 'enable_materialized_views' flag has been added to cassandra.yaml to allow operators to prevent creation of
     views

3.0.15
=====

Upgrading
---------
   - Nothing specific to this release, but please see previous upgrading sections,